...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="e2a-fs-Fq0">
                                <rect key="frame" x="0.0" y="88" width="414" height="728"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                <prototypes>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="Message" rowHeight="98" id="nsx-4a-mDa">
                                        <rect key="frame" x="0.0" y="28" width="414" height="98"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="nsx-4a-mDa" id="eAo-2o-59v">
                                            <rect key="frame" x="0.0" y="0.0" width="414" height="98"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Dan says:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="reI-Q6-7ll">
                                                    <rect key="frame" x="20" y="11" width="374" height="21"/>
                                                    <accessibility key="accessibilityConfiguration" label="Name"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Subject Line" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO
                                                    <rect key="frame" x="20" y="40" width="374" height="21"/>
                                                    <accessibility key="accessibilityConfiguration" label="Subject"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" tag="3" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Message" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id=
                                                    <rect key="frame" x="20" y="69" width="374" height="21"/>
...
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="8jv-Sj-auR"/>
                                </connections>
                            </tableView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Io-Wu-bid">
                                <rect key="frame" x="141.5" y="824" width="131" height="38"/>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="21"/>
                                <state key="normal" title="Add Message"/>
                                <connections>
                                    <segue destination="Xmw-Pv-sBl" kind="show" id="aef-BY-t6l"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
...
            <objects>
                <viewController id="Xmw-Pv-sBl" customClass="NewMessagePage" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="7Ya-nU-5QX">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="User Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TU2-8c-sRa">
                                <rect key="frame" x="49" y="210" width="316" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Subject" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mDx-no-4Uq">
                                <rect key="frame" x="49" y="264" width="316" height="34"/>
...
                            <constraint firstItem="mDx-no-4Uq" firstAttribute="top" secondItem="TU2-8c-sRa" secondAttribute="bottom" constant="20" id="fZ1-0r-SfV"/>
                            <constraint firstItem="TU2-8c-sRa" firstAttribute="top" secondItem="uKH-Gi-NGD" secondAttribute="bottom" constant="53" id="xUm-hz-Ksf"/>
                            <constraint firstItem="TU2-8c-sRa" firstAttribute="leading" secondItem="Y1H-fc-cIY" secondAttribute="leading" constant="49" id="zWh-Ds-to8"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="aEd-5d-gNq">
                        <barButtonItem key="rightBarButtonItem" title="Submit" id="Qlf-12-o9s">
                            <connections>
                                <action selector="submit" destination="Xmw-Pv-sBl" id="nmJ-c2-1Sb"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
